--- a/my-app/.eslintrc.json
+++ b/my-app/.eslintrc.json
@@ -31,10 +31,17 @@
       "extends": [
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint"
+        "prettier"
       ],
       "parser": "@typescript-eslint/parser",
       "plugins": ["@typescript-eslint"]
     }
-  ]
+  ],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  }
 }
