--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-typescript": "^1.0.10",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-webpack-plugin": "^3.2.0",
