--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-typescript": "^1.0.10",
@@ -25,6 +26,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
